--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./public/images/logo/albana-clodi-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="dark:bg-gray-900">
